--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -20,20 +20,20 @@ para poder controlar el desarrollo del proyecto:
 
 \hfill
 
-Es importante recalcar que no voy a seguir la metodología SCRUM, sino que solo usaré algunos principios y 
-conceptos de metodologías ágiles debido a las condiciones en las que se va a desarrollar el proyecto 
+Es importante recalcar que no voy a seguir la metodología SCRUM, sino que solo usaré algunos principios y
+conceptos de metodologías ágiles debido a las condiciones en las que se va a desarrollar el proyecto
 (no hay un cliente real, no hay un equipo de desarrollo real, etc.). Por tanto, se utilizarán los siguientes aspectos de SCRUM:
 \begin{itemize}
     \item \textbf{Sprints:} Se definirán los Sprints (iteraciones) que se realizarán para el desarrollo del proyecto, explicando
-    el objetivo de cada uno de ellos y detallando la duración y las fechas de inicio y de fin.
+          el objetivo de cada uno de ellos y detallando la duración y las fechas de inicio y de fin.
     \item \textbf{Historias de Usuario:} Se listarán y describirán las historias de usuario que se van a implementar en cada sprint a partir
-    de los requisitos funcionales del proyecto especificados en el capítulo de Especificación de Requisitos.
+          de los requisitos funcionales del proyecto especificados en el capítulo de Especificación de Requisitos.
     \item \textbf{Product Backlog: } Se definirá el product backlog, que es una lista de todas las funcionalidades (Historias de usuario) que se
-    pretenden implementar en el proyecto. Esta lista se ordenará por prioridad de acuerdo a la importancia que tienen para el usuario final.
+          pretenden implementar en el proyecto. Esta lista se ordenará por prioridad de acuerdo a la importancia que tienen para el usuario final.
     \item \textbf{Velocidad:} Se calculará la velocidad de trabajo que se tendrá en el desarrollo del proyecto a partir de la cantidad de horas
-    que se pretenden dedicar al proyecto cada día y la duración de los Sprints.
+          que se pretenden dedicar al proyecto cada día y la duración de los Sprints.
     \item \textbf{Puntos de historia: } Se asignarán los puntos de historia a cada historia de usuario para poder estimar la cantidad de trabajo
-    que se debería realizar en cada sprint. Los valores de estos puntos de historia se calcularán a partir de la estimación de la complejidad de cada historia de usuario.
+          que se debería realizar en cada sprint. Los valores de estos puntos de historia se calcularán a partir de la estimación de la complejidad de cada historia de usuario.
 \end{itemize}
 
 
@@ -52,16 +52,16 @@ de estimar cuanta cantidad de trabajo se podría realizar.
     \item Cada Sprint dura 2 semanas (14 días). Si cada día trabajamos 5 horas de forma aproximada, obtenemos un total de 70 horas
           en cada Sprint.
     \item En mi entorno, se estima que 1 PH son dos días de trabajo ideal (es decir, 10 horas equivalen a 1 punto de historia).
-    Esto significa que cada dos jornadas de trabajo real, se debería completar 1 PH. Sin embargo, en la realidad, esto no siempre 
-    es así ya que estamos realizando una aproximación.
+          Esto significa que cada dos jornadas de trabajo real, se debería completar 1 PH. Sin embargo, en la realidad, esto no siempre
+          es así ya que estamos realizando una aproximación.
     \item Si multiplicamos un programador por las 70 horas de trabajo y lo dividimos por el número de horas de trabajo por cada punto de hisotira
-    (10 horas), obtenemos que deberíamos completar \textbf{7 PH} por sprint aproximadamente.
+          (10 horas), obtenemos que deberíamos completar \textbf{7 PH} por sprint aproximadamente.
 \end{itemize}
 
-\textit{Nota: La duración de los Sprints puede variar en función de factores externos al proyecto. Pero se tratará de que duren 
-2 semanas para seguir un ritmo de trabajo constante.}
-\textit{Nota 2: Puesto que estamos realizando estimaciones y suposiciones para la planificación, esta está sujeta a cambios a 
-lo largo del proyecto.}
+\textit{Nota: La duración de los Sprints puede variar en función de factores externos al proyecto. Pero se tratará de que duren
+    2 semanas para seguir un ritmo de trabajo constante.}
+\textit{Nota 2: Puesto que estamos realizando estimaciones y suposiciones para la planificación, esta está sujeta a cambios a
+    lo largo del proyecto.}
 
 \section{Product Backlog}
 A continuación, se listarán todas las historias de usuario ordenadas por prioridad de acuerdo a la importancia que tienen para el usuario final del producto.
@@ -75,11 +75,11 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 8)
     \item \textbf{HU29 - } Como profesor quiero ver una lista de todas las preguntas. (Prioridad: Alta | Puntos de Historia: 0.5)
-    \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 2)
+    \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU14 - } Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU15 - } Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU15 - } Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU16 - } Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU17 - } Como profesor quiero eliminar contenido multimedia de una lección. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU27 - } Como profesor quiero añadir preguntas a un test del tipo entrada de texto. (Prioridad: Media | Puntos de Historia: 1)
@@ -91,15 +91,16 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU30 - } Como administrador quiero ver una lista de todos los usuarios. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU24 - } Como administrador quiero modificar los datos de un usuario. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU25 - } Como administrador quiero eliminar un usuario. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU23 - } Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
     \item \textbf{HU12 - } Como usuario quiero ver el ranking de usuarios. (Prioridad: Baja | Puntos de Historia: 1)
     \item \textbf{HU5 - } Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 1)
-    \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 2)
+
 \end{itemize}
 
 \section{Sprints}
-Nuestro proyecto se pretende desarrollar en 14 Sprints. Cada Sprint tendrá una duración de 2 semanas, y se pretenden realizar una media 
+Nuestro proyecto se pretende desarrollar en 14 Sprints. Cada Sprint tendrá una duración de 2 semanas, y se pretenden realizar una media
 de 7 puntos de historia por Sprint. A continuación se especificará el contenido de cada Sprint con las fechas de inicio y fin de cada uno de ellos.
 
 \subsection{Sprint \#1 - Documentación inicial}
@@ -132,6 +133,7 @@ En este Sprint se realizará:
 \textit{03/02/2023   -   17/02/2023}
 En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \begin{itemize}
+    \item Revisión de la planificación y el análisis y corrección de errores.
     \item Redactar Capítulo 6 - Diseño.
     \item Preparación del backend para el desarrollo.
           \begin{itemize}
@@ -144,11 +146,11 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \subsection{Sprint \#5 - Registro y login de usuarios}
 \textit{17/02/2023   -   03/03/2023}
 
-En este Sprint se comenzará el desarrollo de la aplicación realizando las funcionalidades iniciales del usuario 
-que utilizará la aplicación, tales como el registro, el login, la selección de lección, etc. 
+En este Sprint se comenzará el desarrollo de la aplicación realizando las funcionalidades iniciales del usuario
+que utilizará la aplicación, tales como el registro, el login, la selección de lección, etc.
 \begin{itemize}
-    \item HU1 - Como alumno quiero registrarme en la aplicación.
-    \item HU2 - Como alumno quiero iniciar sesión en la aplicación.
+    \item HU1 - Como usuario quiero registrarme en la aplicación.
+    \item HU2 - Como usuario quiero iniciar sesión en la aplicación.
     \item HU6 - Como usuario quiero seleccionar una lección para leer el temario.
     \item HU7 - Como usuario quiero empezar un test de una lección.
     \item HU29 - Como profesor quiero ver una lista de todas las preguntas.
@@ -166,7 +168,7 @@ Además, podrá comprobar su progreso en cada lección y en la pantalla principa
     \item HU8 - Como usuario quiero responder una pregunta de un test del tipo selección múltiple.
     \item HU9 - Como usuario quiero responder una pregunta de un test del tipo selección única.
     \item HU11 - Como usuario quiero ver el resultado de un test.
-    \item HU12 - Como usuario quiero ver mi progreso en las lecciones.
+    \item HU13 - Como usuario quiero ver mi progreso en las lecciones.
 
 \end{itemize}
 
@@ -188,8 +190,7 @@ supera los puntos de historia de un Sprint.
 
 
 \begin{itemize}
-    \item HU13 - Como usuario quiero ver mi progreso en las lecciones.
-    \item HU28 - Como profesor quiero ver una lista de todas las lecciones. 
+    \item HU28 - Como profesor quiero ver una lista de todas las lecciones.
     \item HU14 - Como profesor quiero crear una lección.
     \item HU15 - Como profesor quiero modificar el texto de una lección.
     \item HU16 - Como profesor quiero añadir contenido multimedia a una lección.
@@ -207,7 +208,7 @@ de los distintos tipos. Además, se realizará la funcionalidad de ver todos los
     \item HU27 - Como profesor quiero añadir preguntas a un test del tipo escritura de texto.
     \item HU18 - Como profesor quiero añadir preguntas a un test del tipo selección múltiple.
     \item HU19 - Como profesor quiero añadir preguntas a un test del tipo selección única.
-    \item HU20 - Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. 
+    \item HU20 - Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono.
     \item HU21 - Como profesor quiero eliminar preguntas de un test.
     \item HU22 - Como profesor quiero modificar preguntas de un test.
     \item HU30 - Como administrador quiero ver una lista de todos los usuarios.
@@ -274,16 +275,63 @@ de todos los capítulos para corregir errores y mejorar la redacción. Se prepar
 \end{itemize}
 
 
+\newpage
 
 \section{Diagrama de Gantt}
-Por último, se muestra el diagrama de Gantt de la planificación del proyecto, dividido en Sprints. En él se puede ver la duración de cada Sprint y la proporción de estos en el tiempo total del proyecto.
+Por último, se muestran los diagramas de Gantt de la planificación del proyecto. 
+
+
+El primero es más general y representa la división del desarrollo del producto en Sprints.
+En él se puede ver la duración de cada Sprint y la proporción de estos en el tiempo total del proyecto. 
+
+\begin{figure}[H]
+    \centering
+    \centerline{\includegraphics[width=1\textwidth]{imagenes/c4/gantt.png}}
+    \caption{Diagrama de Gantt de la planificación del proyecto, divivido por Sprints.}
+    \label{fig:diagrama_gantt}
+\end{figure}
+
+Como se puede ver, el proyecto se ha dividido en 14 Sprints, cada uno de ellos con una duración de dos semanas aproximadamente.
+El desarrollo de cada Sprint se realizará normalmente de forma secuencial, es decir, no se empezará a desarrollar el siguiente 
+Sprint hasta que no se haya terminado el anterior.
+Además, es importante recalcar que los Sprints del proyecto se dividen en tres fases:
+\begin{itemize}
+    \item \textbf{Fase de Documentación:} en esta fase se redactará la documentación necesaria para el desarrollo del proyecto, como puede ser la especificación de requisitos, el estado del arte, la planificación, el diseño...
+    A pesar de que esta sea la fase donde se redactará la mayor parte de la documentación, también se realizará esta en las fases posteriores.
+    \item \textbf{Implementación:} en esta fase se desarrollará el producto, es decir, se implementarán las funcionalidades del proyecto.
+    \item \textbf{Pruebas y finalización:} en esta fase se realizarán las pruebas necesarias para comprobar que el producto funciona correctamente y que no hay errores en el código. Además, se finalizará la documentación del proyecto y se preparará la presentación del mismo.
+\end{itemize}
+
+
+Por otro lado, a continuación se encuentra un diagrama de Gantt más detallado, en el que se puede ver la división de 
+cada Sprint en historias de usuario o tareas y la duración de cada una de ellas. El diagrama se ha dividido en cuatro partes
+para facilitar su visualización y su lectura, debido a la gran cantidad de información que contiene.
+
+\begin{figure}[H]
+    \centering
+    \centerline{\includegraphics[width=1\textwidth]{imagenes/c4/gantt1.png}}
+    \caption{Diagrama de Gantt de los cuatro primeros Sprints.}
+    \label{fig:diagrama_gantt1}
+\end{figure}
 
 \begin{figure}[H]
 
     \centering
-    \centerline{\includegraphics[width=1.25\textwidth]{imagenes/c4/gantt.png}}
-    \caption{Diagrama de Gantt de la planificación del proyecto, divivido por Sprints.}
-    \label{fig:diagrama_gantt}
+    \centerline{\includegraphics[width=1\textwidth]{imagenes/c4/gantt2.png}}
+    \caption{Diagrama de Gantt de los Sprints 5, 6, 7 y 8.}
+    \label{fig:diagrama_gantt2}
+\end{figure}
 
+\begin{figure}[H]
+    \centering
+    \centerline{\includegraphics[width=1.1\textwidth]{imagenes/c4/gantt3.png}}
+    \caption{Diagrama de Gantt de los Sprints 9, 10 y 11.}
+    \label{fig:diagrama_gantt3}
+\end{figure}
 
+\begin{figure}[H]
+    \centering
+    \centerline{\includegraphics[width=1.2\textwidth]{imagenes/c4/gantt4.png}}
+    \caption{Diagrama de Gantt de los Sprints 12, 13 y 14.}
+    \label{fig:diagrama_gantt4}
 \end{figure}
