--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -26,7 +26,7 @@
 \usepackage{makecell}
 \usepackage{longtable}
 \usepackage{tabularx}
-
+\usepackage{hhline}
 \usepackage[pdfborder={0 0 0}]{hyperref} %referencia
 
 % ********************************************************************
