--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -51,10 +51,10 @@ de estimar cuanta cantidad de trabajo se podría realizar.
     \item Se pretende dedicar 5 horas al día de trabajo aproximadamente.
     \item Cada Sprint dura 2 semanas (14 días). Si cada día trabajamos 5 horas de forma aproximada, obtenemos un total de 70 horas
           en cada Sprint.
-    \item En mi entorno, se estima que 1 PH son dos días de trabajo ideal (es decir, 10 horas equivalen a 1 punto de historia).
+    \item En mi entorno, se estima que 1 PH son dos días de trabajo ideal (es decir, 10 horas).
           Esto significa que cada dos jornadas de trabajo real, se debería completar 1 PH. Sin embargo, en la realidad, esto no siempre
           es así ya que estamos realizando una aproximación.
-    \item Si multiplicamos un programador por las 70 horas de trabajo y lo dividimos por el número de horas de trabajo por cada punto de hisotira
+    \item Si multiplicamos un programador por las 70 horas de trabajo y lo dividimos por el número de horas de trabajo por cada punto de historia
           (10 horas), obtenemos que deberíamos completar \textbf{7 PH} por sprint aproximadamente.
 \end{itemize}
 
