Pantalla principal avanzada y arreglos a memoria

--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -20,6 +20,13 @@ para poder controlar el desarrollo del proyecto:
 
 \hfill
 
+\begin{figure}[H]
+    \centering
+    \centerline{\includegraphics[width=\textwidth]{imagenes/c4/scrum.png}}
+    \caption{Diagrama de la arquitectura del sistema, donde se muestra la comunicación entre el servidor y la aplicación móvil.}
+    \label{fig:diagramadearquitectura}    
+\end{figure}
+
 Es importante recalcar que no voy a seguir la metodología SCRUM, sino que solo usaré algunos principios y
 conceptos de metodologías ágiles debido a las condiciones en las que se va a desarrollar el proyecto
 (no hay un cliente real, no hay un equipo de desarrollo real, etc.). Por tanto, se utilizarán los siguientes aspectos de SCRUM:
@@ -28,12 +35,19 @@ conceptos de metodologías ágiles debido a las condiciones en las que se va a d
           el objetivo de cada uno de ellos y detallando la duración y las fechas de inicio y de fin.
     \item \textbf{Historias de Usuario:} Se listarán y describirán las historias de usuario que se van a implementar en cada sprint a partir
           de los requisitos funcionales del proyecto especificados en el capítulo de Especificación de Requisitos.
-    \item \textbf{Product Backlog: } Se definirá el product backlog, que es una lista de todas las funcionalidades (Historias de usuario) que se
+    \item \textbf{Product Backlog: }Se definirá el product backlog, que es una lista de todas las funcionalidades (Historias de usuario) que se
           pretenden implementar en el proyecto. Esta lista se ordenará por prioridad de acuerdo a la importancia que tienen para el usuario final.
     \item \textbf{Velocidad:} Se calculará la velocidad de trabajo que se tendrá en el desarrollo del proyecto a partir de la cantidad de horas
           que se pretenden dedicar al proyecto cada día y la duración de los Sprints.
-    \item \textbf{Puntos de historia: } Se asignarán los puntos de historia a cada historia de usuario para poder estimar la cantidad de trabajo
+    \item \textbf{Puntos de historia: }Se asignarán los puntos de historia a cada historia de usuario para poder estimar la cantidad de trabajo
           que se debería realizar en cada sprint. Los valores de estos puntos de historia se calcularán a partir de la estimación de la complejidad de cada historia de usuario.
+    \item \textbf{Reuniones: }Pese a no encajar exactamente en ninguna de las reuniones que hay en SCRUM, se realizarán reuniones cada dos semanas para
+          poder controlar el progreso del proyecto y realizar un seguimiento de los avances. En estas reuniones se tratará:
+            \begin{itemize}
+                \item \textbf{Qué se ha hecho:} Se comentará el trabajo realizado desde la anterior reunión para comentar las posibles mejoras.
+                \item \textbf{Qué falta por hacer: }Se comparará la planificación realizada para el Sprint con el trabajo realizado, comprobando qué cosas han podido faltar.
+                \item \textbf{Qué se piensa hacer: }Se volverá a planificar si es necesario y se determinará qué trabajo se planea realizar durante el nuevo Sprint.
+            \end{itemize}
 \end{itemize}
 
 
@@ -60,6 +74,7 @@ de estimar cuanta cantidad de trabajo se podría realizar.
 
 \textit{Nota: La duración de los Sprints puede variar en función de factores externos al proyecto. Pero se tratará de que duren
     2 semanas para seguir un ritmo de trabajo constante.}
+    
 \textit{Nota 2: Puesto que estamos realizando estimaciones y suposiciones para la planificación, esta está sujeta a cambios a
     lo largo del proyecto.}
 
@@ -214,7 +229,6 @@ de los distintos tipos. Además, se realizará la funcionalidad de ver todos los
     \item HU30 - Como administrador quiero ver una lista de todos los usuarios.
 \end{itemize}
 
-\newpage
 
 \subsection{Sprint \#10 - Funcionalidades del administrador y ranking}
 \textit{28/04/2023   -   12/05/2023}
@@ -274,8 +288,6 @@ de todos los capítulos para corregir errores y mejorar la redacción. Se prepar
     \item Preparación de la presentación del proyecto.
 \end{itemize}
 
-
-\newpage
 
 \section{Diagrama de Gantt}
 Por último, se muestran los diagramas de Gantt de la planificación del proyecto. 
