--- a/Memoria/capitulos/05_Analisis.tex
+++ b/Memoria/capitulos/05_Analisis.tex
@@ -2,23 +2,24 @@
 
 \section{Introducción}
 En este capítulo se va a describir de forma más detallada el problema que se va a resolver con la aplicación a desarrollar. De esta forma, vamos a especificar qué es lo que 
-tiene que hacer el sistema.  
+tiene que hacer el sistema para su futuro desarrollo. El objetivo del análisis es definir, estructurar y describir los requisitos o historias de usuario para conseguir una comprensión
+más precisa y detallada del problema a resolver.
 \section{Historias de Usuario}
 A continuación, se procederá a describir las historias de usuario que se han definido para el proyecto. 
 
 % OTRA OPCIÓN:
-\begin{table}[]
-    \centering
-    \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|lll|lll|}
-    \hline
-    \multicolumn{1}{|l|}{\textbf{ID:}}        & \multicolumn{1}{l|}{HU1}  & \textbf{Nombre:}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}fdfdfdfdfdfsfsfsfkjsdflñsdfljksdlkñfljsklfklsflkslfjslkfjslkfsjflsdkdf\\ psofspfskfñsdlfksñlfk\end{tabular}}                                                                                                                                                        \\ \hline
-    \multicolumn{1}{|l|}{PH}        & \multicolumn{1}{l|}{1}    & Descripcion  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}elsfsdkfjdskffjdlfksdljflsdkfljsdlfkjdvlskdkfklgfdkgldgfjkdlfkgljdf\\ ldlkgkdjgkñdjfglfdkñgjkdgkdjggdlgkdñlgkdg\\ dglkdsjgdlkñgjdlgkñljdsk\end{tabular}}                                                                                                            \\ \hline
-    \multicolumn{1}{|l|}{Prioridad} & \multicolumn{1}{l|}{Alta} & Dependencias & \multicolumn{1}{l|}{SADKLA}                                                                              & \multicolumn{1}{l|}{Requisitos Funcionales}                                                                             & RF1                                                                           \\ \hline
-    \multicolumn{3}{|l|}{Pruebas de aceptacion}                                & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}odijsadlksajdalkdjaldkjasldkajdlsakdjasldkasjdskadjaskldjakdja\\ lakjdañksdl\\ aldksjdlakdjaslkdjlkdajldkasjdlkajdlkasdjaslkdjalkdjaldkjaldkajd\\ añdljañkdjasdñ\\ laskjdsaldjaljdaldjaldjalkdjalsdkjasldkjasldkjdlsakdjasldkajsdla\\ alskdjalkdjaldk\end{tabular}} \\ \hline
-    \end{tabular}%
-    }
-    \end{table}
+% \begin{table}[]
+%     \centering
+%     \resizebox{\textwidth}{!}{%
+%     \begin{tabular}{|lll|lll|}
+%     \hline
+%     \multicolumn{1}{|l|}{\textbf{ID:}}        & \multicolumn{1}{l|}{HU1}  & \textbf{Nombre:}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemplo\end{tabular}}                                                                                                                                                        \\ \hline
+%     \multicolumn{1}{|l|}{PH}        & \multicolumn{1}{l|}{1}    & Descripcion  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemplo\end{tabular}}                                                                                                            \\ \hline
+%     \multicolumn{1}{|l|}{\textbf{Prioridad}} & \multicolumn{1}{l|}{Alta} & \textbf{Dependencias} & \multicolumn{1}{l|}{HU24}                                                                              & \multicolumn{1}{l|}{\textbf{Requisitos Funcionales}}                                                                             & RF1                                                                           \\ \hline
+%     \multicolumn{3}{|l|}{\textbf{Pruebas de aceptacion}}                                & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\ ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\\end{tabular}} \\ \hline
+%     \end{tabular}%
+%     }
+%     \end{table}
     
 \subsection*{Funcionalidad del usuario}
 
@@ -508,7 +509,6 @@ A continuación, se procederá a describir las historias de usuario que se han d
         \end{tabular}%
     }
 \end{table}
-\newpage
 \section{Diagrama de Clases}
 Para finalizar esta sección, se muestra un primer diagrama de clases de nuestro proyecto, que nos permite ver las relaciones entre las diferentes clases
  que compondrán el sistema y que nos ayudará a entender mejor el funcionamiento del mismo. Para ello, primero se han identificado las entidades en 
